# baseAndroidApp

./: CMakeLists.txt
android/: build.sh
android/apk/: AndroidManifest.xml
android/apk/res/drawable/: splash.xml
android/apk/res/mipmap-anydpi-v26/: ic_example.xml
android/apk/src/ru/base_app/app/: MainActivity.java  MainApplication.java  MainService.java
src/cpp/: main.cpp
src/cpp/Activity/: ActivityCore.cpp  ActivityCore.h  JavaReceiver.cpp  JavaReceiver.h  JavaReceiverNoQt.cpp  JavaReceiverNoQt.h  LocalClient.cpp  LocalClient.h
src/cpp/Service/: LocalServer.cpp  LocalServer.h  ServiceCore.cpp  ServiceCore.h
src/qml/: main.qml
